# SolnAI-aaaa

./: .dockerignore  .gitignore  .windsurfrules  CONTAINER.md  Dockerfile  README-OPTIMIZED-CONFIG.md  README.md  SolnAI.code-workspace  docker-compose.yml  info.md  repomix-output.xml  requirements.txt  run_docker.sh  run_solnai.sh  specification.md  vector_store_resilience.md
.cursor/rules/: 001_chimera_infrastructure_spec.mdc  002_microservice_contracts_spec.mdc  003_docs_alignment_strategy_spec.mdc  100-code-organization.mdc  110-rust-guidelines.mdc  200-api-design.mdc  300-security-resilience.mdc  400-observability.mdc  500-testing.mdc  spec.mdc
.github/workflows/: main.yml
ace-app-contents/client/: Dockerfile  package.json
certs/: ca.key  ca.srl  server.crt  server.csr  server.key
chimera-venv/: pyvenv.cfg
microservices/: ARCHITECTURE.md  README.md
microservices/python/common/nats_lib/: README.md  circuit_breaker.py  config.py  exceptions.py  nats_client.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
microservices/python/common/nats_lib/nats_lib/: circuit_breaker.py  config.py  exceptions.py  nats_client.py
microservices/python/common/nats_lib/tests/: conftest.py
microservices/rust/ingestion-service/: Cargo.toml  Dockerfile  README.md
microservices/rust/ingestion-service/src/: config.rs  error.rs  main.rs  models.rs  nats.rs  routes.rs
nats_lib/: circuit_breaker.py
scripts/: end_to_end_workflow.py  init_models.sh  nats_stream_setup.py  run_integration_tests.sh  simple_start.sh  start.sh
tests/: conftest.py
(+62 files in other folders)
